Updated ipynb to remove unneccery code

--- a/mlmodel/Face Problems.ipynb
+++ b/mlmodel/Face Problems.ipynb
@@ -12,6 +12,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "54b229d7",
+   "metadata": {},
+   "source": [
+    "The code starts by setting up the environment by installing and importing the fastbook package, which is a utility for using the fastai library effectively. This is necessary for the machine learning model implementation and training."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5f530230",
@@ -21,6 +29,14 @@
     "#hide\n",
     "from fastbook import *\n",
     "from fastai.vision.widgets import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd47342c",
+   "metadata": {},
+   "source": [
+    "The required libraries from the fastai package are imported. fastai.vision.widgets includes tools to interact with the vision models such as image uploaders and predictions display."
    ]
   },
   {
@@ -47,6 +63,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ba375c0e",
+   "metadata": {},
+   "source": [
+    "- A list of common skin problems is defined. This list will be used to search for images of these problems online.\n",
+    "- A directory Skin_Problems is created to store images related to these skin issues."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7a1d139b",
@@ -60,6 +85,14 @@
     "        dest.mkdir(exist_ok=True)\n",
     "        results = search_images_ddg(face_problem_type,max_images=500)\n",
     "        download_images(dest, urls=results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "956f2cf5",
+   "metadata": {},
+   "source": [
+    "The code checks if the directory exists. If not, it creates a directory for each skin problem and downloads images using DuckDuckGo’s image search API. This forms the dataset for training the model."
    ]
   },
   {
@@ -95,6 +128,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6433d323",
+   "metadata": {},
+   "source": [
+    "The downloaded images are verified to ensure they are valid. Any corrupted or invalid images are removed to clean the dataset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "474300f4",
@@ -110,6 +151,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2586f93a",
+   "metadata": {},
+   "source": [
+    "The DataBlock is defined, which is the core data structure in fastai for managing data transformations and pipelines. It specifies how to split the data, how to label it, and what transformations to apply (like resizing images)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "af433248",
@@ -117,6 +166,14 @@
    "outputs": [],
    "source": [
     "dls = face_problems.dataloaders(path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71f42fe8",
+   "metadata": {},
+   "source": [
+    "The DataBlock is used to create data loaders, which handle the loading and transformation of images during training."
    ]
   },
   {
@@ -157,6 +214,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b473e78",
+   "metadata": {},
+   "source": [
+    "Data augmentation is applied to improve model robustness. The model is then trained using a pre-trained ResNet50 architecture with a few epochs of fine-tuning."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "58330612",
@@ -178,6 +243,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8507af2a",
+   "metadata": {},
+   "source": [
+    "The trained model is evaluated using confusion matrices and loss plots to analyze performance and identify areas where the model might be failing."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6f1302a3",
@@ -188,273 +261,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "646a334e",
+   "cell_type": "markdown",
+   "id": "26eba0d4",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "path = Path()\n",
-    "path.ls(file_exts='.pkl')"
+    "The trained model is exported for later use. This allows the model to be loaded and used for inference without retraining."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ef3ed028",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "learn_inf = load_learner(path/'export.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c6c6b4a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "learn_inf.predict('harmonal_acne.jpg')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e2c6721",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "learn_inf.dls.vocab"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64c44e2c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "btn_upload = widgets.FileUpload()\n",
-    "btn_upload"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6eff14c1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#hide\n",
-    "# For the book, we can't actually click an upload button, so we fake it\n",
-    "btn_upload = SimpleNamespace(data = ['harmonal_acne.jpg'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3de9d842",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img = PILImage.create(btn_upload.data[-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea9a4594",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "out_pl = widgets.Output()\n",
-    "out_pl.clear_output()\n",
-    "with out_pl: display(img.to_thumb(128,128))\n",
-    "out_pl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "351cdaf2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pred,pred_idx,probs = learn_inf.predict(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5cc27aa9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lbl_pred = widgets.Label()\n",
-    "lbl_pred.value = f'Prediction: {pred}; Probability: {probs[pred_idx]:.04f}'\n",
-    "lbl_pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "736bcd67",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "btn_run = widgets.Button(description='Classify')\n",
-    "btn_run"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97352078",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def on_click_classify(change):\n",
-    "    img = PILImage.create(btn_upload.data[-1])\n",
-    "    out_pl.clear_output()\n",
-    "    with out_pl: display(img.to_thumb(128,128))\n",
-    "    pred,pred_idx,probs = learn_inf.predict(img)\n",
-    "    lbl_pred.value = f'Prediction: {pred}; Probability: {probs[pred_idx]:.04f}'\n",
-    "\n",
-    "btn_run.on_click(on_click_classify)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2a2c1994",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#hide\n",
-    "#Putting back btn_upload to a widget for next cell\n",
-    "btn_upload = widgets.FileUpload()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b43c3e5b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "VBox([widgets.Label('Select your bear!'), \n",
-    "      btn_upload, btn_run, out_pl, lbl_pred])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6c2af20b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labels = learn.dls.vocab\n",
-    "def predict(img):\n",
-    "    img = PILImage.create(img)\n",
-    "    pred,pred_idx,probs = learn.predict(img)\n",
-    "    return {labels[i]: float(probs[i]) for i in range(len(labels))}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c3911230",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import gradio as gr\n",
-    "gr.Interface(fn=predict, inputs=gr.inputs.Image(shape=(512, 512)), outputs=gr.outputs.Label(num_top_classes=3)).launch(share=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a42fc07",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import gradio as gr\n",
-    "from fastai.vision.all import *\n",
-    "import skimage\n",
-    "\n",
-    "learn = load_learner('export.pkl')\n",
-    "\n",
-    "labels = learn.dls.vocab\n",
-    "def predict(img):\n",
-    "    img = PILImage.create(img)\n",
-    "    pred,pred_idx,probs = learn.predict(img)\n",
-    "    return {labels[i]: float(probs[i]) for i in range(len(labels))}\n",
-    "\n",
-    "title = \"Face condition Analyzer\"\n",
-    "description = \"A face condition detector trained on the custom dataset with fastai. Created using Gradio and HuggingFace Spaces.\"\n",
-    "examples = ['harmonal_acne.jpg','forehead_wrinkles.jpg','oily_skin.jpg']\n",
-    "enable_queue=True\n",
-    "\n",
-    "gr.Interface(fn=predict,inputs=gr.inputs.Image(shape=(512, 512)),outputs=gr.outputs.Label(num_top_classes=3),title=title,\n",
-    "             description=description,examples=examples,enable_queue=enable_queue).launch(share=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d7b76171",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import gradio as gr\n",
-    "from fastai.vision.all import *\n",
-    "import skimage\n",
-    "import pathlib\n",
-    "import pandas as pd\n",
-    "\n",
-    "plt = platform.system()\n",
-    "if plt == 'Linux': pathlib.WindowsPath = pathlib.PosixPath\n",
-    "title = \"Face condition Analyzer\"\n",
-    "description = \"A face condition detector trained on the custom dataset with fastai. Created using Gradio and HuggingFace Spaces.\"\n",
-    "examples = [['harmonal_acne.jpg'],['forehead_wrinkles.jpg'],['oily_skin.jpg']]\n",
-    "enable_queue=True\n",
-    "\n",
-    "with gr.Blocks(title=title,description=description,examples=examples,enable_queue=enable_queue) as demo:\n",
-    "    learn = load_learner('export.pkl')\n",
-    "    labels = learn.dls.vocab\n",
-    "    def predict(img):\n",
-    "        img = PILImage.create(img)\n",
-    "        pred,pred_idx,probs = learn.predict(img)\n",
-    "        return {labels[i]: float(probs[i]) for i in range(len(labels))}\n",
-    "    gr.Markdown(\"# Face Skin Analyzer\")\n",
-    "    gr.Markdown(\"A face condition detector trained on the custom dataset with fastai. Created using Gradio and HuggingFace Spaces. Kindly upload a photo of your face.\")\n",
-    "    with gr.Row():\n",
-    "        inputs = gr.inputs.Image(shape=(512, 512))\n",
-    "        outputs = gr.outputs.Label(num_top_classes=3)\n",
-    "    btn = gr.Button(\"Predict\")\n",
-    "    btn.click(fn=predict, inputs=inputs, outputs=outputs)\n",
-    "    \n",
-    "    df=pd.read_excel(\"recommendation.xlsx\")\n",
-    "    classes = df['class'].unique()\n",
-    "    with gr.Accordion(\"Find your skin condition using above analyzer and see the Recommended solutions\",open=True):\n",
-    "        for c in classes:\n",
-    "            with gr.Accordion(c,open=False):\n",
-    "                df_temp = df[df['class']==c]\n",
-    "                with gr.Row():\n",
-    "                    for i,current_row in df_temp.iterrows():\n",
-    "                        with gr.Column():\n",
-    "                            html_box = gr.HTML(\"<a href='{}'><img src ='{}'></a>\".format(current_row['profit_link'],current_row['product_image']))                   \n",
-    "demo.launch()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e575d70d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
