--- a/mlmodel/Face Problems.ipynb
+++ b/mlmodel/Face Problems.ipynb
@@ -16,7 +16,7 @@
    "id": "54b229d7",
    "metadata": {},
    "source": [
-    "The code starts by setting up the environment by installing and importing the fastbook package, which is a utility for using the fastai library effectively. This is necessary for the machine learning model implementation and training."
+    "installing and importing the fastbook package."
    ]
   },
   {
